# To-Do-app

./: .gitignore  app.py  manage.py  pyproject.toml
apps/core/: api.py
apps/core/interfaces/: base_interfaces.py
apps/core/schema/nodes/: core_node.py
apps/core/schema/queries/: tasks.py
apps/tasks/controllers/: sub_task_controller.py  task_controller.py
apps/tasks/factories/: abstract_interfaces.py
apps/tasks/factories/concrete_factories/: sub_task_factory.py  task_factory.py
apps/tasks/migrations/: 0001_initial.py  0002_subtasks.py
apps/tasks/models/: __init__.py  tasks.py
apps/tasks/schema/mutations/: create_task.py  update_task.py
apps/tasks/schema/nodes/: task_node.py
apps/tasks/schema/queries/: get_tasks.py
task_exercise/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
